# discord-bot-c

./: .gitignore  CMakeLists.txt  JSON.c  main.c
APIs/: ApiCall.c  ApiRoutes.c
Discord/: Bot.c  Websocket.c
Discord/Events/: MessageCreate.c
Discord/Requests/: Messages.c
Discord/Structs/: Structures.c
Utils/: Strings.c
cJSON/: cJSON.c
